--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
