--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite --host 0.0.0.0 --port 3000",
+    "start": "vite --host 0.0.0.0 --port 80",
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "vite build ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
