--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
     "start": "vite --host 0.0.0.0 --port 3000",
-
     "dev": "vite --host",
     "build": "vite build ",
-
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -34,7 +31,8 @@
     "react-router-dom": "^6.19.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
